[project]
name = "sleipnirgroup-jormungandr"
description = "A linearity-exploiting reverse mode autodiff library and nonlinear program solver DSL."
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["matplotlib", "numpy", "scipy"]

  [project.license]
  file = "LICENSE.txt"

  [project.urls]
  Documentation = "https://sleipnirgroup.github.io/Sleipnir/"

[build-system]
requires = [
  "nanobind",
  "py-build-cmake~=0.5.0",
  "pybind11-mkdoc",
]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.cmake]
build_type = "Release"
source_path = "."
build_args = ["--target", "_jormungandr"]
install_components = ["python_modules"]
install_args = []

  [tool.py-build-cmake.cmake.options]
  BUILD_TESTING = "OFF"
  BUILD_PYTHON = "ON"

[tool.py-build-cmake.module]
name = "jormungandr"
directory = "jormungandr/src"

[tool.py-build-cmake.sdist]
include = [
  "CMakeLists.txt",
  "SleipnirConfig.cmake.in",
  "cmake/*.cmake",
  "include",
  "jormungandr",
  "src"
]
exclude = []

[tool.py-build-cmake.wheel]
platform_tag = "guess"
python_abi = "abi3"
abi3_minimum_cpython_version = 312

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["jormungandr/test", "examples/CurrentManager/test"]
